--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ a{
 	height: 15vw;
 	border-radius: 5px;
 	margin-right: 10px;
+	cursor: pointer; /* PROF NOTE: Making the image seem clickable to the visitor by changing the cursor to pointer */
 }
 
 .attachedImage:hover{
